gccida/g3/final_giv_value
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/final_giv_value/src/unroll.c:3741:49: error: unknown type name 'induction_1'
rtx  final_giv_value( const  struct loop *loop, induction_1 *v) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/final_giv_value/src/unroll.c:3783:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
exit_labels = ( rtx)exit_labels[1]; 
                    ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/final_giv_value/src/unroll.c:3823:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v8 + 2), 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/final_giv_value/src/obj/unroll.o] Error 1
